# ChessLib.Py

./: .Dockerfile.swp  .gitignore  API_DOC.md  CMakeLists.txt  Dockerfile  Dockerfile-dev  Jenkinsfile  Jenkinsfile.old  MAINTAINERS.md  MANIFEST.in  README.md  build.sh  build_manylinux.sh  requirements.txt  setup.py  update_version.py
.github/workflows/: docker-dev-cicd.yml  docker-image.yml  pypi-manylinux-release.yml  simulate-manylinux-release-no-upload.yml
ChessLib/: CMakeLists.txt  chessbitboard.c  chessbitboard.h  chessdraw.c  chessdraw.h  chessdrawgen.c  chessdrawgen.h  chesslibmodule.h  chesspieceatpos.h  chessposition.c  chesstypes.h  package_version_gen.py  setup.py  test.py
ChessLib.PyMod/: CMakeLists.txt
ChessLib.PyMod/include/: chesslibmodule.h
ChessLib.PyMod/src/: chesslibmodule.c
ChessLib/include/: chessboard.h  chessdraw.h  chessdrawgen.h  chessgamestate.h  chesslibmodule.h  chesspiece.h  chesspieceatpos.h  chessposition.h  chesstypes.h
ChessLib/src/: chessboard.c  chessdraw.c  chessdrawgen.c  chessdrawgen.cpp  chessgamestate.c  chesslibmodule.c  chesspiece.c  chesspieceatpos.c  chessposition.c
chesslib/include/: chessboard.h  chessdraw.h  chessdrawgen.h  chessgamesession.h  chessgamestate.h  chesslibmodule.h  chesspieceatpos.h  chessposition.h  chesstypes.h  chessxformat.h
chesslib/src/: chessboard.c  chessdraw.c  chessdrawgen.c  chessgamesession.c  chessgamestate.c  chesslibmodule.c  chesspiece.c  chessposition.c  chessxformat.c
include/: chessboard.h  chessdraw.h  chesslib.h  chesslibmodule.h  chesspiece.h
src/: chessgamestate.c  chesslibmodule.c  chessposition.c
test/: CMakeLists.txt  unit_tests.c
tests/: function_test.py  memleak_test.py  test.py
